creating statistics helper functions for period comparison

--- a/package.json
+++ b/package.json
@@ -27,14 +27,18 @@
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-moment-shim": "^3.5.0",
     "ember-cli-qunit": "^4.1.1",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
+    "ember-d3": "^0.4.1",
     "ember-data": "~2.18.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-moment": "^7.6.0",
     "ember-pouch": "^5.0.0",
+    "ember-power-select": "^2.0.0-beta.2",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.18.0",
     "ember-truth-helpers": "^2.0.0",
@@ -44,5 +48,8 @@
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
+  },
+  "dependencies": {
+    "d3": "^4.13.0"
   }
 }
