--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ember-cli-uglify": "^2.0.0",
     "ember-d3": "^0.4.1",
     "ember-data": "~2.18.0",
+    "ember-data-change-tracker": "^0.7.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-moment": "^7.6.0",
