--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "ember-pouch": "^5.0.0",
     "ember-power-select": "^2.0.0-beta.2",
     "ember-resolver": "^4.0.0",
+    "ember-route-action-helper": "^2.0.6",
     "ember-source": "~2.18.0",
     "ember-truth-helpers": "^2.0.0",
     "ember-welcome-page": "^3.0.0",
+    "emberx-file-input": "^1.2.1",
     "eslint-plugin-ember": "^5.0.0",
     "loader.js": "^4.2.3"
   },
