--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ember-welcome-page": "^3.0.0",
     "emberx-file-input": "^1.2.1",
     "eslint-plugin-ember": "^5.0.0",
+    "liquid-fire": "^0.29.2",
     "loader.js": "^4.2.3"
   },
   "engines": {
