--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-moment": "^7.6.0",
+    "ember-native-dom-helpers": "^0.6.2",
     "ember-pouch": "^5.0.0",
     "ember-power-select": "^2.0.0-beta.2",
     "ember-resolver": "^4.0.0",
     "ember-route-action-helper": "^2.0.6",
     "ember-source": "~2.18.0",
+    "ember-test-selectors": "^0.3.8",
     "ember-truth-helpers": "^2.0.0",
     "ember-welcome-page": "^3.0.0",
     "emberx-file-input": "^1.2.1",
