--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "~2.18.0",
+    "ember-cli": "^3.0.0",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.6.0",
     "ember-cli-dependency-checker": "^2.0.0",
@@ -33,12 +33,13 @@
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
     "ember-d3": "^0.4.1",
-    "ember-data": "~2.18.0",
+    "ember-data": "^3.0.0",
     "ember-data-change-tracker": "^0.7.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-moment": "^7.6.0",
     "ember-native-dom-helpers": "^0.6.2",
+    "ember-page-title": "^4.0.3",
     "ember-pouch": "^5.0.0",
     "ember-power-select": "^2.0.0-beta.2",
     "ember-resolver": "^4.0.0",
