--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "ember-power-select": "^2.0.0-beta.2",
     "ember-resolver": "^4.0.0",
     "ember-route-action-helper": "^2.0.6",
+    "ember-shepherd": "^3.1.0",
     "ember-source": "~2.18.0",
     "ember-test-selectors": "^0.3.8",
+    "ember-tether": "^1.0.0-beta.1",
     "ember-truth-helpers": "^2.0.0",
     "ember-welcome-page": "^3.0.0",
     "emberx-file-input": "^1.2.1",
