--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "^3.0.0",
+    "ember-cli": "~3.1.1",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.6.0",
     "ember-cli-dependency-checker": "^2.0.0",
@@ -37,7 +37,7 @@
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
     "ember-d3": "^0.4.1",
-    "ember-data": "^3.0.0",
+    "ember-data": "~3.1.0",
     "ember-data-change-tracker": "^0.7.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
@@ -49,7 +49,7 @@
     "ember-resolver": "^4.0.0",
     "ember-route-action-helper": "^2.0.6",
     "ember-shepherd": "^3.1.0",
-    "ember-source": "~2.18.0",
+    "ember-source": "~3.1.0",
     "ember-test-selectors": "^0.3.8",
     "ember-tether": "^1.0.0-beta.1",
     "ember-truth-helpers": "^2.0.0",
